# rust-lecture

./: .gitignore  Cargo.toml  Containerfile  Dioxus.toml  build.rs  compose.yaml  package-lock.json  package.json  tailwind.config.js
.devcontainer/: devcontainer.json
.github/workflows/: deploy-web.yaml
src/: get_asset.rs  main.rs  pages.rs
src/components/: paginator_buttons.rs  paradigm.rs
src/layouts/: nav_bar.rs
src/pages/: about_us.rs  borrow_checker.rs  conclusion.rs  examples.rs  home.rs  license.rs  rust_history.rs  sources.rs  type_system.rs
src/pages/examples/: graph_example.rs  image_manipulation.rs
src/pages/examples/graph_example/: graph.rs
src/pages/sources/: sources.json
src/pages/type_system/: example.rs
